Anomaly Detection/kubernetes/crew-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crew-agent
  namespace: factory
  labels:
    app: crew-agent
    project: factory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crew-agent
  template:
    metadata:
      labels:
        app: crew-agent
        project: factory-app
    spec:
      containers:
        - name: crew-agent
          image: edoebzd/private:crew-agent
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
