Anomaly Detection/kubernetes/ml-detector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-detector
  namespace: factory
  labels:
    app: ml-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-detector
  template:
    metadata:
      labels:
        app: ml-detector
    spec:
      containers:
        - name: ml-detector
          image: edoebzd/private:ml-detector
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          volumeMounts:
            - name: ml-state-volume
              mountPath: /data/ml_state
      volumes:
        - name: ml-state-volume
          persistentVolumeClaim:
            claimName: ml-detector-pvc
