Anomaly Detection/kubernetes/mongo-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-writer
  namespace: factory
  labels:
    app: mongo-writer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-writer
  template:
    metadata:
      labels:
        app: mongo-writer
    spec:
      containers:
        - name: writer
          image: edoebzd/private:infra
          command: ["python", "mongo_writer.py"]
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      restartPolicy: Always
