Anomaly Detection/kubernetes/mqtt-kafka-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-kafka-bridge
  namespace: factory
  labels:
    app: mqtt-kafka-bridge
spec:
  replicas: 1          #non supporta >1
  selector:
    matchLabels:
      app: mqtt-kafka-bridge
  template:
    metadata:
      labels:
        app: mqtt-kafka-bridge
    spec:
      containers:
        - name: bridge
          image: edoebzd/private:infra
          command: ["python", "mqtt_kafka_bridge.py"]
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      restartPolicy: Always
