Anomaly Detection/kubernetes/simulators.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-a
  namespace: factory
  labels:
    app: machine-a
    component: simulator
    project: factory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine-a
  template:
    metadata:
      labels:
        app: machine-a
        component: simulator
        project: factory-app
    spec:
      containers:
        - name: simulator
          image: edoebzd/private:simulator
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-b
  namespace: factory
  labels:
    app: machine-b
    component: simulator
    project: factory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine-b
  template:
    metadata:
      labels:
        app: machine-b
        component: simulator
        project: factory-app
    spec:
      containers:
        - name: simulator
          image: edoebzd/private:simulator
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-c
  namespace: factory
  labels:
    app: machine-c
    component: simulator
    project: factory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine-c
  template:
    metadata:
      labels:
        app: machine-c
        component: simulator
        project: factory-app
    spec:
      containers:
        - name: simulator
          image: edoebzd/private:simulator
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-d
  namespace: factory
  labels:
    app: machine-d
    component: simulator
    project: factory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine-d
  template:
    metadata:
      labels:
        app: machine-d
        component: simulator
        project: factory-app
    spec:
      containers:
        - name: simulator
          image: edoebzd/private:simulator
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
